# IMDB-Recommender-System

./: .gitignore  Student2.py  Tutorial.ipynb  pyproject.toml
fin project/: Student2.py  Student3.py
finproject/: Student2.py
