[tool.poetry]
name = "csc271final"
version = "0.1.0"
description = ""
authors = ["jonahwoods95 <jonahwoods95@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.23.4"
pandas = "^1.5.1"
matplotlib = "^3.5.1"
seaborn = "^0.12.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.16.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
